<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/song1"
        android:layout_width="370dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:drawableStart="@drawable/song1"
        android:gravity="center"
        android:text="@string/song1"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/song2"
        android:layout_width="367dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/song2"
        android:gravity="center"
        android:text="@string/sia_helium"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song1" />

    <TextView
        android:id="@+id/song3"
        android:layout_width="371dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/song3"
        android:gravity="center"
        android:text="@string/tovelo_habits"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song2" />

    <TextView
        android:id="@+id/song4"
        android:layout_width="370dp"
        android:layout_height="37dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/song4"
        android:gravity="center"
        android:text="@string/irina_barbat"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song3" />

    <TextView
        android:id="@+id/song5"
        android:layout_width="367dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/song5"
        android:gravity="center"
        android:text="@string/halsey_without"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song4" />

    <TextView
        android:id="@+id/song6"
        android:layout_width="370dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/song6"
        android:gravity="center"
        android:text="@string/motans_nascut"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song5" />

    <ImageView
        android:id="@+id/pause"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/song6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <ImageView
        android:id="@+id/play"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="35dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/song6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_play"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="56dp"
        android:layout_height="87dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageView
        android:id="@+id/prev"
        android:layout_width="65dp"
        android:layout_height="90dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <TextView
        android:id="@+id/nowPlaying"
        android:layout_width="213dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play"
        app:layout_constraintVertical_bias="0.644" />

    <TextView
        android:id="@+id/queue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="See Queue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toEndOf="@+id/nowPlaying" />

</androidx.constraintlayout.widget.ConstraintLayout>